--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
         <nav class="nav-main">
             <img src="img/JET1.jpg" class="nav-brand">
             <ul class="nav-menu">
-                <li><a href="#">Opción 1</a></li>
+                <li><a href="calculadora.html">Calculadora</a></li>
                 <li><a href="#">Opción 2</a></li>
                 <li><a href="#">Opción 3</a></li>
                 <li><a href="#">Opción 4</a></li>
